--- a/MLLM_latex/main.tex
+++ b/MLLM_latex/main.tex
@@ -2,7 +2,7 @@
 \usepackage{hyperref}
 
 \title{A Comprehensive Guide to Multimodal Large Language Models in Vision-Language Tasks}
-\author{Contributors}
+\author{MLLM-MARCUS}
 
 \begin{document}
 
