--- a/MLLM_latex/main.tex
+++ b/MLLM_latex/main.tex
@@ -1,10 +1,15 @@
 \documentclass{book}
 \usepackage{hyperref}
-
+\usepackage{natbib}
+\usepackage{graphicx}
+\usepackage{amsmath}
+\usepackage{xcolor}
+\usepackage[sectionbib]{chapterbib}
 \title{A Comprehensive Guide to Multimodal Large Language Models in Vision-Language Tasks}
-\author{MLLM-MARCUS}
+\author{(draft)Marcus, Pu Tian, Caitlyn, wittz, deviser, Li Ming, Wei An}
 
 \begin{document}
+
 
 \maketitle
 \tableofcontents
@@ -18,7 +23,6 @@
 \include{chapter7/chapter7}  
 \include{chapter8/chapter8}  
 \include{chapter9/chapter9}  
-\include{chapter10/chapter10}  
-\include{chapter11/chapter11}  
- 
+
+
 \end{document} 
